[gd_scene load_steps=10 format=3 uid="uid://vij5ols5id75"]

[ext_resource type="Script" path="res://scene/main.gd" id="1_j5q2f"]
[ext_resource type="Texture2D" uid="uid://b5axewl54kyop" path="res://assets/Background.jpg" id="1_lafx8"]
[ext_resource type="PackedScene" uid="uid://cgh4h18vln14y" path="res://scene/character.tscn" id="1_ncm6j"]
[ext_resource type="PackedScene" uid="uid://ducgh8oa6r1k" path="res://scene/object.tscn" id="2_g2u86"]
[ext_resource type="PackedScene" uid="uid://byfmokr8x778p" path="res://scene/floor.tscn" id="3_aypj3"]
[ext_resource type="PackedScene" uid="uid://cco6uf13q5ccs" path="res://scene/platform.tscn" id="5_2s0wu"]
[ext_resource type="PackedScene" uid="uid://2klbinloj5v5" path="res://scene/gameover.tscn" id="6_4kamh"]
[ext_resource type="PackedScene" uid="uid://50agnoit3ofc" path="res://scene/score_label.tscn" id="7_v7d7m"]
[ext_resource type="PackedScene" uid="uid://46h31b3kqjr6" path="res://scene/coin.tscn" id="9_dyesi"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j5q2f")
object_scene = ExtResource("2_g2u86")
coin_scene = ExtResource("9_dyesi")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_ncm6j")]
z_index = 1
position = Vector2(961, 435)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(961, 435)
texture = ExtResource("1_lafx8")

[node name="Floor" parent="." instance=ExtResource("3_aypj3")]

[node name="platform" parent="." instance=ExtResource("5_2s0wu")]

[node name="gameover" parent="." instance=ExtResource("6_4kamh")]

[node name="ScoreLabel" parent="." instance=ExtResource("7_v7d7m")]

[node name="ObjectTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LifeCounter" type="Label" parent="."]
offset_left = 829.0
offset_top = 109.0
offset_right = 1045.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Lives left: 3"

[connection signal="restart" from="gameover" to="." method="_on_gameover_restart"]
[connection signal="timeout" from="ObjectTimer" to="." method="_on_object_timer_timeout"]
